# Ideogram-4-modular-shotlist-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_1.0.0.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: config_schema.md  records_schema.md
examples/: README.md  character_lora_multipack_config.json  product_sheet_config.json
examples/character_lora_core/: character_bible.json  command.txt  records.sample.json  report.sample.md
examples/character_lora_expressions/: character_bible.json  command.txt  records.sample.json  report.sample.md
examples/product_sheet/: command.txt  records.sample.json  report.sample.md
examples/review_workflow/: README.md  character_bible.json  command.txt  records.sample.json  report.sample.md  review_workflow_config.json
examples/stable_cli_workflow/: README.md  command.txt  stable_cli_workflow_config.json
examples/style_profiles/: README.md  character_bible.json  command.txt  records.sample.json  report.sample.md  style_profile_config.json
examples/workflow_handoff/: README.md  command.txt
src/shotplanner/: __init__.py  bbox.py  character.py  cli.py  exporters.py  generator.py  ideogram_json.py  models.py  modules.py  palettes.py  presets.py  (+5 more)
tests/: test_bbox.py  test_character_bible.py  test_examples.py  test_exporters.py  test_palettes.py  test_presets.py  test_records.py  test_records_cli.py  test_schema.py  test_shotlists.py  test_templates.py
