[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shotplanner"
version = "1.0.0"
description = "A modular Ideogram 4 shot planning record generator."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "shotplanner contributors" }]
license = { text = "MIT" }
keywords = ["shotlist", "prompt-engineering", "ideogram", "lora", "planning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]

[project.scripts]
shotplanner = "shotplanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
